--- a/view/atp-admin/index/edit.phtml
+++ b/view/atp-admin/index/edit.phtml
@@ -1,82 +1,54 @@
-<h2>
-	<?php if($object->id) { ?>
-		Edit <?=$modelData['displayName']?> - <?=$object->displayName()?>
-	<?php } else { ?>
-		Create New <?=$modelData['displayName']?>
-	<?php } ?>
-</h2>
-
-<div id="admin-tabs">
-	<ul>
-		<li><a href="#object-details-tab">Details</a></li>
+<form method="post" enctype="multipart/form-data">
+	<h2>
+		Admin &gt; <a href="<?=$this->url('admin', array('action' => 'list', 'model' => $model))?>"><?=\ATP\Inflector::pluralize($modelData['displayName'])?></a> &gt;
 		<?php if($object->id) { ?>
-			<?php foreach($object->childrenFields() as $singular => $plural) { ?>
-				<li><a href="#<?=$plural?>-tab"><?=$plural?></a></li>
-			<?php } ?>
-			<?php foreach($object->relatedObjectFields() as $singular => $data) { ?>
-				<?php $plural = \ATP\Inflector::pluralize($singular)?>
-				<li><a href="#<?=$plural?>-tab"><?=$plural?></a></li>
-			<?php } ?>
+			Edit <?=$modelData['displayName']?> - <?=$object->displayName()?>
+		<?php } else { ?>
+			Create New <?=$modelData['displayName']?>
 		<?php } ?>
-	</ul>
+		<input type="submit" class="model-save" name="submit" value="Save <?=$modelData['displayName']?>" />
+	</h2>
+
+	<div id="admin-tabs">
+		<ul>
+			<?php foreach(array_keys($modelData['tabs']) as $tab) { ?>
+				<li><a href="#object-<?=\ATP\Inflector::underscore($tab)?>-tab"><?=$tab?></a></li>
+			<?php } ?>
+		</ul>
 	
-	<div id="object-details-tab">
-		<div class="admin-edit model-edit-form">
-			<form method="post" enctype="multipart/form-data">
-				<input type="hidden" name="modelData[id]" value="<?=$object->id?>" />
-				
-				<div class="owner-field-list">
-					<?php foreach($object->ownerFields() as $column => $table) { ?>
-						<?php $ownerField = \ATP\Inflector::variablize(str_replace("_id", "", $column)); ?>
-						<?=$this->formModelSelect(array(
-							'label' => \ATP\Inflector::titleize($ownerField),
-							'name' => "modelData[{$column}]",
-							'className' => get_class($object->$ownerField),
-							'value' =>$object->$ownerField->id
-						))?>
-						<?php if($object->$ownerField->id) { ?>
-							<!--<a href="<?=$this->url('admin' ,array('action' => 'edit', 'model' => $column, 'id' =>$object->$ownerField->id))?>">Edit <?=$column?></a>-->
+		<input type="hidden" name="modelData[id]" value="<?=$object->id?>" />
+		<?php foreach($modelData['tabs'] as $tab => $columns) { ?>
+			<div id="object-<?=\ATP\Inflector::underscore($tab)?>-tab">
+				<div class="admin-edit model-edit-form">
+					<?php foreach($columns as $column) { ?>
+						<?php if($object->isOwnerField($column)) { ?>
+							<?php $table = $object->ownerTable($column) ;?>
+							<?php $ownerField = \ATP\Inflector::variablize(str_replace("_id", "", $column)); ?>
+							<?=$this->formModelSelect(array(
+								'label' => \ATP\Inflector::titleize($ownerField),
+								'name' => "modelData[{$column}]",
+								'className' => get_class($object->$ownerField),
+								'value' =>$object->$ownerField->id
+							))?>
+							<?php if($object->$ownerField->id) { ?>
+								<!--<a href="<?=$this->url('admin' ,array('action' => 'edit', 'model' => $column, 'id' =>$object->$ownerField->id))?>">Edit <?=$column?></a>-->
+							<?php } ?>
+						<?php } else { ?>
+							<?php $columnData = $modelData['fields'][$column]?>
+							<?php $helper = "form{$columnData['type']}"?>
+							<?=$this->$helper(array('label' => $columnData['label'], 'name' => "modelData[{$column}]", 'value' => $object->$column))?>
+							<?php if($object->isAFile($column) && !empty($object->$column->name)) { ?>
+								<a class="file-link" href="<?=$this->basePath($object->filePath($column))?>" target="blank">View File</a>
+							<?php } ?>
 						<?php } ?>
+						
 					<?php } ?>
 				</div>
-				
-				<?php foreach($object->dataColumns() as $column) { ?>
-					<?php $columnData = $modelData['fields'][$column]?>
-					<?php $helper = "form{$columnData['type']}"?>
-					<?=$this->$helper(array('label' => $columnData['label'], 'name' => "modelData[{$column}]", 'value' => $object->$column))?>
-					<?php if($object->isAFile($column) && !empty($object->$column->name)) { ?>
-						<a class="file-link" href="<?=$this->basePath($object->filePath($column))?>" target="blank">View File</a>
-					<?php } ?>
-				<?php } ?>
-				
-				<input type="submit" class="model-save" name="submit" value="Save <?=$modelData['displayName']?>" />
-			</form>
-		</div>
+			</div>
+		<?php } ?>
 	</div>
-	
-	<?php if($object->id) { ?>
-		<?php foreach($object->childrenFields() as $singular => $plural) { ?>
-			<div id="<?=$plural?>-tab">
-				<div class="admin-edit">
-					<?php $field = lcfirst($singular) . 'List'?>
-					<?php /*<?=$this->partial('admin/model_list.phtml', array('objects' => $object->{$field}, 'delete' => false))?> */ ?>
-					<?php /*Add <?=$singular?> <?=$this->partial('form/model_select.phtml', array('column' => "new_{$singular}", 'obj' => $object->{$field}->temp()))?> */?>
-				</div>
-			</div>
-		<?php } ?>
-		<?php foreach($this->object->relatedObjectFields() as $singular => $data) { ?>
-			<?php $plural = \ATP\Inflector::pluralize($singular)?>
-			<div id="<?=$plural?>-tab">
-				<div class="admin-edit">
-					<?php $field = lcfirst($singular) . 'List'?>
-					<?php /* <?=$this->partial('admin/model_list.phtml', array('objects' => $object->{$field}, 'delete' => false))?> */ ?>
-					<?php /*Add <?=$singular?> <?=$this->partial('form/model_select.phtml', array('column' => "blah", 'obj' => $object->{$field}->temp()))?>*/ ?>
-				</div>
-			</div>
-		<?php } ?>
-	<?php } ?>
-</div>
+</form>
 
 <p class="admin-return">
-	<a href="<?=$this->url('admin', array('action' => 'list', 'model' => $model))?>">Back to <?=\ATP\Inflector::pluralize($modelData['displayName'])?> List</a>
+	<a href="
 </p>
