--- a/public/atp-admin/css/admin.less
+++ b/public/atp-admin/css/admin.less
@@ -62,6 +62,7 @@ a {
 
 /* General page styles */
 h2 {width: 100%; .padded; background: @bg; border-bottom: solid 4px @ll;}
+body {background: @ll;}
 
 input[type=submit] {width: 200px; text-align: center; font-weight: bold; border: solid @ll; float: right; margin-top: -4px;}
 
