--- a/view/atp-admin/shared/admin_menu.phtml
+++ b/view/atp-admin/shared/admin_menu.phtml
@@ -1,6 +1,6 @@
 <div id="admin-header">
 	<div id="main-header">
-		<h1><a href="<?=$this->url('admin')?>"><?=$this->siteParam('Admin Title')?></a></h1>
+		<h1><a href="<?=$this->url('admin')?>"><?=$this->siteParam('core-admin-title')?></a></h1>
 		<a id="logout-link" href="<?=$this->url('admin', array('action' => 'logout'))?>">Logout</a>
 		<span id="id-span">Hi {{adminUser:}}!</span>
 	</div>
