--- a/public/atp-admin/css/admin.less
+++ b/public/atp-admin/css/admin.less
@@ -119,6 +119,11 @@ p.success-message {
 	}
 }
 
+.accordion {
+	h3 {display: block; background: @bg; .padded; margin: 4px;}
+	div {display: block; width: 100%;}
+}
+
 .section-header {
 	background: @bg; .padded; border-bottom: solid 4px @ll;
 }
