--- a/view/atp-admin/index/edit.phtml
+++ b/view/atp-admin/index/edit.phtml
@@ -6,7 +6,8 @@
 		<?php } else { ?>
 			Create New <?=$modelData['displayName']?>
 		<?php } ?>
-		<input type="submit" class="model-save" name="submit" value="Save <?=$modelData['displayName']?>" />
+		<input type="submit" class="model-save" name="save-and-edit" value="Save and Continue Editing" />
+		<input type="submit" class="model-save" name="save" value="Save" />
 	</h2>
 
 	<div id="admin-tabs">
