--- a/view/atp-admin/index/edit.phtml
+++ b/view/atp-admin/index/edit.phtml
@@ -2,9 +2,9 @@
 	<h2>
 		Admin &gt; <a href="<?=$this->url('admin', array('action' => 'list', 'model' => $model))?>"><?=\ATP\Inflector::pluralize($modelData['displayName'])?></a> &gt;
 		<?php if($object->id) { ?>
-			Edit <?=$modelData['displayName']?> - <?=$object->displayName()?>
+			Editing <?=$modelData['displayName']?> - <?=$object->displayName()?>
 		<?php } else { ?>
-			Create New <?=$modelData['displayName']?>
+			Creating New <?=$modelData['displayName']?>
 		<?php } ?>
 		<input type="submit" class="model-save" name="save-and-edit" value="Save and Continue Editing" />
 		<input type="submit" class="model-save" name="save" value="Save" />
