Update styling for admin paginator

--- a/public/atp-admin/css/admin.css
+++ b/public/atp-admin/css/admin.css
@@ -181,7 +181,7 @@ ul.paginator li.current-page {
 }
 ul.paginator li.per-page {
  border: none;
- width: 12em;
+ width: auto;
 }
 ul.paginator li.per-page span {
  display: inline-block;
