--- a/public/atp-admin/css/admin.less
+++ b/public/atp-admin/css/admin.less
@@ -108,7 +108,7 @@ ul.paginator {
 		&.current-page {background: @bg;}
 		&.per-page {
 			border: none;
-			width: 12em;
+			width: auto;
 			span {display: inline-block; padding-top: 4px; font-weight: normal;}
 			select {
 				width: 4em;
