--- a/public/atp-admin/css/admin.less
+++ b/public/atp-admin/css/admin.less
@@ -1,5 +1,6 @@
 @txt: #000000;
 @bg: #cccccc;
+@fg: #ffffff;
 @hl: #eeeeee;
 @ll: #aaaaaa;
 @selected: #eeeeaa;
@@ -200,6 +201,7 @@ table.admin-model-list {
 }
 
 div[aria-describedby=dialog-confirm] {
+	background: @fg;
 	border-radius: 8px;
 	.shadowed;
 	button {border: solid 4px @ll; background: @hl; font-weight: bold; height: 32px; padding: 0 8px; border-radius: 8px;}
