--- a/view/atp-admin/index/list.phtml
+++ b/view/atp-admin/index/list.phtml
@@ -6,11 +6,11 @@
 
 <?=$paginator?>
 
-<div id="dialog-confirm" title="Deleting the <?=$model?>">
+<div id="dialog-confirm" title="Deleting the <?=strtolower($modelData['displayName'])?>">
 	<p>
 		<span class="ui-icon ui-icon-alert" style="float: left; margin: 0 7px 6em 0;"></span>
 		<b id="deleted-model-name">Item Name</b><br/><br/>
-		This <?=$modelData['displayName']?> will be permanently deleted and cannot be recovered.<br/><br/>
-		<em>Are you sure you want to delete this <?=$modelData['displayName']?>?</em>
+		This <?=strtolower($modelData['displayName'])?> will be permanently deleted and cannot be recovered.<br/><br/>
+		<em>Are you sure you want to delete this <?=strtolower($modelData['displayName'])?>?</em>
 	</p>
 </div>
