--- a/public/atp-admin/css/admin.css
+++ b/public/atp-admin/css/admin.css
@@ -1,526 +1,536 @@
+/* Reset */
 .reset {
- margin: 0 0 0 0;
- padding: 0;
- float: none;
- box-sizing: border-box;
- -mox-box-sizing: border-box;
- font-family: Arial, Helvetica, sans-serif;
- font-size: 16px;
- line-height: 24px;
- vertical-align: top;
- text-align: justify;
- color: #000000;
- border: none;
- border-width: 0;
- border-image-width: 0;
- border-spacing: 0;
+  margin: 0 0 0 0;
+  padding: 0;
+  float: none;
+  box-sizing: border-box;
+  -mox-box-sizing: border-box;
+  font-family: Arial,Helvetica,sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  vertical-align: top;
+  text-align: justify;
+  color: #000000;
+  border: none;
+  border-width: 0;
+  border-image-width: 0;
+  border-spacing: 0;
 }
 * {
- margin: 0 0 0 0;
- padding: 0;
- float: none;
- box-sizing: border-box;
- -mox-box-sizing: border-box;
- font-family: Arial, Helvetica, sans-serif;
- font-size: 16px;
- line-height: 24px;
- vertical-align: top;
- text-align: justify;
- color: #000000;
- border: none;
- border-width: 0;
- border-image-width: 0;
- border-spacing: 0;
+  margin: 0 0 0 0;
+  padding: 0;
+  float: none;
+  box-sizing: border-box;
+  -mox-box-sizing: border-box;
+  font-family: Arial,Helvetica,sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  vertical-align: top;
+  text-align: justify;
+  color: #000000;
+  border: none;
+  border-width: 0;
+  border-image-width: 0;
+  border-spacing: 0;
 }
 ul,
 ol {
- display: block;
- list-style-type: none;
+  display: block;
+  list-style-type: none;
 }
 select {
- height: 24px;
+  height: 24px;
 }
 button {
- display: block;
- background: #eeeeee;
- background: #cccccc;
+  display: block;
+  background: #eeeeee;
+  background: #cccccc;
 }
 a {
- text-decoration: none;
+  text-decoration: none;
 }
+/* General Styles */
 .padded {
- padding: 8px;
+  padding: 8px;
 }
 .highlight-link:hover {
- background: #eeeeee;
+  background: #eeeeee;
 }
 .shadowed {
- box-shadow: 4px 4px 8px;
+  box-shadow: 4px 4px 8px;
 }
+/* Login styles */
 #login-dialog {
- background: #cccccc;
- width: 300px;
- margin: auto;
- margin-top: 200px;
- box-shadow: 4px 4px 8px;
+  background: #cccccc;
+  width: 300px;
+  margin: auto;
+  margin-top: 200px;
+  box-shadow: 4px 4px 8px;
 }
 #login-dialog legend {
- background: #aaaaaa;
- padding: 8px;
- width: 100%;
- font-weight: bold;
+  background: #aaaaaa;
+  padding: 8px;
+  width: 100%;
+  font-weight: bold;
 }
 #login-dialog label {
- display: none;
+  display: none;
 }
 #login-dialog input {
- display: block;
- width: 100%;
- padding: 8px;
- border: solid 8px #cccccc;
+  display: block;
+  width: 100%;
+  padding: 8px;
+  border: solid 8px #cccccc;
 }
 #login-dialog input[type=submit] {
- text-align: center;
- font-weight: bold;
+  text-align: center;
+  font-weight: bold;
 }
+/* Header styles */
 #admin-header {
- width: 100%;
- background: #cccccc;
- height: 2.8em;
- border-bottom: solid 4px #aaaaaa;
+  width: 100%;
+  background: #cccccc;
+  height: 2.8em;
+  border-bottom: solid 4px #aaaaaa;
 }
 #admin-header #main-header h1 {
- float: left;
- padding: 8px;
+  float: left;
+  padding: 8px;
 }
 #admin-header #main-header #logout-link,
 #admin-header #main-header #id-span {
- float: right;
- padding: 8px;
+  float: right;
+  padding: 8px;
 }
 #admin-header ul#admin-menu > li {
- float: left;
- padding: 8px 16px;
- text-align: center;
- position: relative;
+  float: left;
+  padding: 8px 16px;
+  text-align: center;
+  position: relative;
 }
 #admin-header ul#admin-menu > li:hover {
- background: #eeeeee;
+  background: #eeeeee;
 }
 #admin-header ul#admin-menu > li > ul {
- position: absolute;
- top: 41px !important;
- left: 0px !important;
- box-shadow: 4px 4px 8px;
- z-index: 999;
- border: solid #aaaaaa;
- width: 10em;
- background: #cccccc;
+  position: absolute;
+  top: 41px !important;
+  left: 0px !important;
+  box-shadow: 4px 4px 8px;
+  z-index: 999;
+  border: solid #aaaaaa;
+  width: 10em;
+  background: #cccccc;
 }
 #admin-header ul#admin-menu > li > ul > li {
- padding: 8px;
+  padding: 8px;
 }
 #admin-header ul#admin-menu > li > ul > li:hover {
- background: #eeeeee;
+  background: #eeeeee;
 }
 #admin-header ul#admin-menu > li > ul > li a {
- display: block;
- width: 100%;
+  display: block;
+  width: 100%;
 }
+/* General page styles */
 h2 {
- width: 100%;
- padding: 8px;
- background: #cccccc;
- border-bottom: solid 4px #aaaaaa;
+  width: 100%;
+  padding: 8px;
+  background: #cccccc;
+  border-bottom: solid 4px #aaaaaa;
 }
 input[type=submit] {
- text-align: center;
- font-weight: bold;
- border: solid #aaaaaa;
- float: right;
- margin-top: -4px;
- margin-left: 8px;
- padding: 0 8px;
+  text-align: center;
+  font-weight: bold;
+  border: solid #aaaaaa;
+  float: right;
+  margin-top: -4px;
+  margin-left: 8px;
+  padding: 0 8px;
 }
 p.success-message {
- background: #ccffcc;
- color: #00aa00;
- border: dashed 2px #00aa00;
- padding: 8px;
- position: absolute;
- top: 8px;
- left: 25%;
- right: 25%;
+  background: #ccffcc;
+  color: #00aa00;
+  border: dashed 2px #00aa00;
+  padding: 8px;
+  position: absolute;
+  top: 8px;
+  left: 25%;
+  right: 25%;
 }
 p.error-message {
- background: #ffcccc;
- color: #aa0000;
- border: dashed 2px #aa0000;
- padding: 8px;
- position: absolute;
- top: 8px;
- left: 25%;
- right: 25%;
+  background: #ffcccc;
+  color: #aa0000;
+  border: dashed 2px #aa0000;
+  padding: 8px;
+  position: absolute;
+  top: 8px;
+  left: 25%;
+  right: 25%;
 }
 ul.paginator {
- float: right;
- margin-right: 8px;
+  float: right;
+  margin-right: 8px;
 }
 ul.paginator li {
- display: inline-block;
- text-align: center;
- font-weight: bold;
- width: 2em;
- height: 2em;
- margin: 0.5em 0;
- border: solid 4px #aaaaaa;
- border-radius: 8px;
+  display: inline-block;
+  text-align: center;
+  font-weight: bold;
+  width: 2em;
+  height: 2em;
+  margin: 0.5em 0;
+  border: solid 4px #aaaaaa;
+  border-radius: 8px;
 }
 ul.paginator li.current-page {
- background: #cccccc;
+  background: #cccccc;
 }
 ul.paginator li.per-page {
- border: none;
- width: auto;
+  border: none;
+  width: auto;
 }
 ul.paginator li.per-page span {
- display: inline-block;
- padding-top: 4px;
- font-weight: normal;
+  display: inline-block;
+  padding-top: 4px;
+  font-weight: normal;
 }
 ul.paginator li.per-page select {
- width: 4em;
- height: 2em;
- border: solid 2px #cccccc;
+  width: 4em;
+  height: 2em;
+  border: solid 2px #cccccc;
 }
 .ui-tabs-vertical .ui-tabs-nav {
- float: left;
- width: 10%;
- background: #aaaaaa;
- min-height: 500px;
+  float: left;
+  width: 10%;
+  background: #aaaaaa;
+  min-height: 500px;
 }
 .ui-tabs-vertical .ui-tabs-nav li {
- padding: 8px;
- background: #cccccc;
- margin-left: 4px;
- margin-top: 4px;
+  padding: 8px;
+  background: #cccccc;
+  margin-left: 4px;
+  margin-top: 4px;
 }
 .ui-tabs-vertical .ui-tabs-nav li:hover {
- background: #eeeeee;
+  background: #eeeeee;
 }
 .ui-tabs-vertical .ui-tabs-nav li a {
- display: block;
- width: 100%;
+  display: block;
+  width: 100%;
 }
 .ui-tabs-vertical .ui-tabs-nav li:first-child {
- border-top-left-radius: 16px;
- margin-top: 8px;
+  border-top-left-radius: 16px;
+  margin-top: 8px;
 }
 .ui-tabs-vertical .ui-tabs-nav li:last-child {
- border-bottom-left-radius: 16px;
+  border-bottom-left-radius: 16px;
 }
 .ui-tabs-vertical .ui-tabs-nav li.ui-state-active {
- background: #eeeeee;
+  background: #eeeeee;
 }
 .ui-tabs-vertical .ui-tabs-panel {
- border-bottom: solid 8px #aaaaaa;
- float: left;
- width: 90%;
- padding: 8px;
- background: #eeeeee;
- min-height: 500px;
+  border-bottom: solid 8px #aaaaaa;
+  float: left;
+  width: 90%;
+  padding: 8px;
+  background: #eeeeee;
+  min-height: 500px;
+  /* Fix bugs with mce editor */
 }
 .ui-tabs-vertical .ui-tabs-panel label {
- padding: 8px;
- float: left;
- clear: both;
- border: solid 2px #cccccc;
- width: 20%;
- margin: 8px 0;
- text-align: right;
- background: #cccccc;
+  padding: 8px;
+  float: left;
+  clear: both;
+  border: solid 2px #cccccc;
+  width: 20%;
+  margin: 8px 0;
+  text-align: right;
+  background: #cccccc;
 }
 .ui-tabs-vertical .ui-tabs-panel input {
- border: solid 2px #cccccc;
- padding: 8px;
- width: 80%;
- margin: 8px 0;
- float: left;
+  border: solid 2px #cccccc;
+  padding: 8px;
+  width: 80%;
+  margin: 8px 0;
+  float: left;
 }
 .ui-tabs-vertical .ui-tabs-panel input[type=file] {
- width: 70%;
+  width: 70%;
 }
 .ui-tabs-vertical .ui-tabs-panel input[type=checkbox] {
- width: 32px;
- border: none;
+  width: 32px;
+  border: none;
 }
 .ui-tabs-vertical .ui-tabs-panel select {
- border: solid 2px #cccccc;
- float: left;
- padding: 8px;
- margin: 8px 0;
- height: 44px;
- width: 80%;
+  border: solid 2px #cccccc;
+  float: left;
+  padding: 8px;
+  margin: 8px 0;
+  height: 44px;
+  width: 80%;
 }
 .ui-tabs-vertical .ui-tabs-panel select option {
- padding: 8px;
+  padding: 8px;
 }
 .ui-tabs-vertical .ui-tabs-panel select[type=yes-no] {
- width: 75px;
+  width: 75px;
 }
 .ui-tabs-vertical .ui-tabs-panel a.file-link {
- display: block;
- float: right;
- width: 10%;
- padding: 8px;
- margin: 8px 0;
- text-align: center;
+  display: block;
+  float: right;
+  width: 10%;
+  padding: 8px;
+  margin: 8px 0;
+  text-align: center;
 }
 .ui-tabs-vertical .ui-tabs-panel textarea {
- width: 80%;
- height: 20em;
- margin: 8px 0;
- padding: 8px;
- float: left;
- border: solid 2px #cccccc;
+  width: 80%;
+  height: 20em;
+  margin: 8px 0;
+  padding: 8px;
+  float: left;
+  border: solid 2px #cccccc;
 }
 .ui-tabs-vertical .ui-tabs-panel textarea.wysiwyg {
- width: 79%;
+  width: 79%;
 }
 .ui-tabs-vertical .ui-tabs-panel table.mceLayout {
- float: left;
- margin: 8px 0;
+  float: left;
+  margin: 8px 0;
 }
 .ui-tabs-vertical .ui-tabs-panel .mceStatusbar {
- height: 28px;
+  height: 28px;
 }
 .ui-tabs-vertical .ui-tabs-panel .mceStatusbar .mceResize {
- margin-top: 8px;
+  margin-top: 8px;
 }
 .accordion h3 {
- display: block;
- background: #cccccc;
- padding: 8px;
- margin: 4px;
+  display: block;
+  background: #cccccc;
+  padding: 8px;
+  margin: 4px;
 }
 .accordion div {
- display: block;
- width: 100%;
+  display: block;
+  width: 100%;
 }
 .section-header {
- background: #cccccc;
- padding: 8px;
- border-bottom: solid 4px #aaaaaa;
+  background: #cccccc;
+  padding: 8px;
+  border-bottom: solid 4px #aaaaaa;
 }
 .section {
- padding: 8px;
- margin-bottom: 16px;
+  padding: 8px;
+  margin-bottom: 16px;
 }
+/* Model List styles */
 a.model-new {
- display: block;
- border: solid 4px #aaaaaa;
- background: #eeeeee;
- font-weight: bold;
- padding: 8px;
- margin: 8px;
- border-radius: 8px;
- width: 300px;
+  display: block;
+  border: solid 4px #aaaaaa;
+  background: #eeeeee;
+  font-weight: bold;
+  padding: 8px;
+  margin: 8px;
+  border-radius: 8px;
+  width: 300px;
 }
 a.model-new:before {
- content: "+";
- font-size: 18pt;
- margin-left: 5px;
+  content: "+";
+  font-size: 18pt;
+  margin-left: 5px;
 }
 table.admin-model-list {
- width: 100%;
- border-bottom: solid 4px #aaaaaa;
+  width: 100%;
+  border-bottom: solid 4px #aaaaaa;
 }
 table.admin-model-list thead tr {
- background: #cccccc;
+  background: #cccccc;
 }
 table.admin-model-list thead tr td {
- padding: 8px;
- font-weight: bold;
+  padding: 8px;
+  font-weight: bold;
 }
 table.admin-model-list tbody tr td {
- padding: 8px;
+  padding: 8px;
 }
 table.admin-model-list tbody tr td.button-cell {
- padding: 4px 8px 0 0;
- width: 90px;
+  padding: 4px 8px 0 0;
+  width: 90px;
 }
 table.admin-model-list tbody tr td.button-cell .admin-list-button {
- display: block;
- width: 100%;
- border: solid 4px #aaaaaa;
- background: #eeeeee;
- font-weight: bold;
- height: 32px;
- padding: 0 8px;
- border-radius: 8px;
- text-align: center;
+  display: block;
+  width: 100%;
+  border: solid 4px #aaaaaa;
+  background: #eeeeee;
+  font-weight: bold;
+  height: 32px;
+  padding: 0 8px;
+  border-radius: 8px;
+  text-align: center;
 }
 table.admin-model-list tbody tr:nth-child(even) {
- background: #eeeeee;
+  background: #eeeeee;
 }
 div[aria-describedby=dialog-confirm] {
- background: #ffffff;
- border-radius: 8px;
- box-shadow: 4px 4px 8px;
+  background: #ffffff;
+  border-radius: 8px;
+  box-shadow: 4px 4px 8px;
 }
 div[aria-describedby=dialog-confirm] button {
- border: solid 4px #aaaaaa;
- background: #eeeeee;
- font-weight: bold;
- height: 32px;
- padding: 0 8px;
- border-radius: 8px;
+  border: solid 4px #aaaaaa;
+  background: #eeeeee;
+  font-weight: bold;
+  height: 32px;
+  padding: 0 8px;
+  border-radius: 8px;
 }
 div[aria-describedby=dialog-confirm] .ui-dialog-titlebar {
- padding: 8px;
- background: #cccccc;
- border-top-left-radius: 8px;
- border-top-right-radius: 8px;
+  padding: 8px;
+  background: #cccccc;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 div[aria-describedby=dialog-confirm] .ui-dialog-titlebar span.ui-dialog-title {
- font-weight: bold;
+  font-weight: bold;
 }
 div[aria-describedby=dialog-confirm] .ui-dialog-titlebar button {
- float: right;
- margin-top: -4px;
+  float: right;
+  margin-top: -4px;
 }
 div[aria-describedby=dialog-confirm] .ui-dialog-content {
- padding: 8px;
+  padding: 8px;
 }
 div[aria-describedby=dialog-confirm] .ui-dialog-buttonpane {
- border-top: dashed 2px #aaaaaa;
- height: 48px;
- padding: 8px;
+  border-top: dashed 2px #aaaaaa;
+  height: 48px;
+  padding: 8px;
 }
 div[aria-describedby=dialog-confirm] .ui-dialog-buttonpane .ui-dialog-buttonset {
- text-align: center;
+  text-align: center;
 }
 div[aria-describedby=dialog-confirm] .ui-dialog-buttonpane .ui-dialog-buttonset button {
- display: inline;
- margin: 0 8px 0 8px;
+  display: inline;
+  margin: 0 8px 0 8px;
 }
+/* Date picker */
 #ui-datepicker-div {
- display: none;
- background: #cccccc;
- box-shadow: 4px 4px 8px;
- border: solid 4px #aaaaaa;
+  display: none;
+  background: #cccccc;
+  box-shadow: 4px 4px 8px;
+  border: solid 4px #aaaaaa;
 }
 #ui-datepicker-div * {
- font-size: small;
+  font-size: small;
 }
 #ui-datepicker-div .date-picker-nav {
- display: block;
- width: 10%;
- text-align: center;
- overflow: hidden;
- height: 20px;
- background: #eeeeee;
- margin: 0px 4px 4px 4px;
+  display: block;
+  width: 10%;
+  text-align: center;
+  overflow: hidden;
+  height: 20px;
+  background: #eeeeee;
+  margin: 0px 4px 4px 4px;
 }
 #ui-datepicker-div .ui-datepicker-header {
- background: #aaaaaa;
- text-align: center;
+  background: #aaaaaa;
+  text-align: center;
 }
 #ui-datepicker-div .ui-datepicker-header div.ui-datepicker-title {
- display: inline-block;
+  display: inline-block;
 }
 #ui-datepicker-div .ui-datepicker-header div.ui-datepicker-title select {
- height: 20px;
- width: 70px;
- margin: 0px 4px 4px 4px;
- display: inline-block;
+  height: 20px;
+  width: 70px;
+  margin: 0px 4px 4px 4px;
+  display: inline-block;
 }
 #ui-datepicker-div .ui-datepicker-header .ui-datepicker-prev {
- float: left;
- display: block;
- width: 10%;
- text-align: center;
- overflow: hidden;
- height: 20px;
- background: #eeeeee;
- margin: 0px 4px 4px 4px;
+  float: left;
+  display: block;
+  width: 10%;
+  text-align: center;
+  overflow: hidden;
+  height: 20px;
+  background: #eeeeee;
+  margin: 0px 4px 4px 4px;
 }
 #ui-datepicker-div .ui-datepicker-header .ui-datepicker-prev:before {
- content: "< ";
+  content: "< ";
 }
 #ui-datepicker-div .ui-datepicker-header .ui-datepicker-next {
- float: right;
- display: block;
- width: 10%;
- text-align: center;
- overflow: hidden;
- height: 20px;
- background: #eeeeee;
- margin: 0px 4px 4px 4px;
+  float: right;
+  display: block;
+  width: 10%;
+  text-align: center;
+  overflow: hidden;
+  height: 20px;
+  background: #eeeeee;
+  margin: 0px 4px 4px 4px;
 }
 #ui-datepicker-div .ui-datepicker-header .ui-datepicker-next:before {
- content: "> ";
+  content: "> ";
 }
 #ui-datepicker-div .datepicker-button {
- background: #eeeeee;
- border: solid 2px #cccccc;
- width: 64px;
- text-align: center;
- margin: 4px;
+  background: #eeeeee;
+  border: solid 2px #cccccc;
+  width: 64px;
+  text-align: center;
+  margin: 4px;
 }
 #ui-datepicker-div .ui-datepicker-current {
- background: #eeeeee;
- border: solid 2px #cccccc;
- width: 64px;
- text-align: center;
- margin: 4px;
- float: left;
+  background: #eeeeee;
+  border: solid 2px #cccccc;
+  width: 64px;
+  text-align: center;
+  margin: 4px;
+  float: left;
 }
 #ui-datepicker-div .ui-datepicker-close {
- background: #eeeeee;
- border: solid 2px #cccccc;
- width: 64px;
- text-align: center;
- margin: 4px;
- float: right;
+  background: #eeeeee;
+  border: solid 2px #cccccc;
+  width: 64px;
+  text-align: center;
+  margin: 4px;
+  float: right;
 }
 #ui-datepicker-div table.ui-datepicker-calendar {
- width: 100%;
- padding-bottom: 4px;
- border-bottom: dashed 2px #aaaaaa;
+  width: 100%;
+  padding-bottom: 4px;
+  border-bottom: dashed 2px #aaaaaa;
+  /* Today */
+  /* Selected date */
 }
 #ui-datepicker-div table.ui-datepicker-calendar th {
- text-align: center;
+  text-align: center;
 }
 #ui-datepicker-div table.ui-datepicker-calendar .ui-state-highlight,
 #ui-datepicker-div table.ui-datepicker-calendar .ui-state-highlight * {
- font-weight: bold;
- border: solid 1px;
+  font-weight: bold;
+  border: solid 1px;
 }
 #ui-datepicker-div table.ui-datepicker-calendar .ui-state-active,
 #ui-datepicker-div table.ui-datepicker-calendar .ui-state-active * {
- font-weight: bold;
+  font-weight: bold;
 }
 #ui-datepicker-div table.ui-datepicker-calendar td {
- background: #eeeeee;
- text-align: center;
- border: solid 2px #cccccc;
- width: 32px;
+  background: #eeeeee;
+  text-align: center;
+  border: solid 2px #cccccc;
+  width: 32px;
 }
 #ui-datepicker-div table.ui-datepicker-calendar td.ui-datepicker-week-end {
- background: #aaaaaa;
+  background: #aaaaaa;
 }
 #ui-datepicker-div table.ui-datepicker-calendar td.ui-datepicker-other-month {
- background: #cccccc;
+  background: #cccccc;
 }
 #ui-datepicker-div table.ui-datepicker-calendar td.ui-datepicker-current-day {
- background: #eeeeaa;
+  background: #eeeeaa;
 }
 #ui-datepicker-div table.ui-datepicker-calendar td a {
- display: block;
- width: 100%;
- text-align: center;
+  display: block;
+  width: 100%;
+  text-align: center;
 }
 #dialog-confirm {
- display: none;
+  display: none;
 }
